[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/sbi-core",
    "crates/ngap",
    "crates/nas",
    "crates/pfcp",
    "crates/gtpu",
    "crates/n6",
    "crates/aka",
    "crates/subscriber-db",
    "nf/nf-nrf",
    "nf/nf-amf",
    "nf/nf-smf",
    "nf/nf-upf",
    "nf/nf-ausf",
    "nf/nf-udm",
    "nf/nf-udr",
    "nf/nf-pcf",
    "nf/nf-chf",
    "tools/radian-pki",
    "bdd",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.rs>"]

[workspace.dependencies]
# --- internal crates ---
common = { path = "crates/common" }
sbi-core = { path = "crates/sbi-core" }
ngap = { path = "crates/ngap" }
nas = { path = "crates/nas" }
pfcp = { path = "crates/pfcp" }
gtpu = { path = "crates/gtpu" }
n6 = { path = "crates/n6" }
aka = { path = "crates/aka" }
subscriber-db = { path = "crates/subscriber-db" }

# --- external ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
bytes = "1"
