[package]
name = "sbi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
axum = "0.8.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "http2", "query"] }
uuid = { version = "1.23.4", features = ["v4"] }
