[package]
name = "sbi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum = "0.8.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "http2", "query"] }
uuid = { version = "1.23.4", features = ["v4"] }
aka.workspace = true
subscriber-db.workspace = true
hex = "0.4"
getrandom = "0.2"
# OAuth2 access-token signing/verification (HS256 JWT, TS 33.501 §13.4).
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
hex-literal = "0.4"
