[package]
name = "sbi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum = "0.8.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "http2", "query", "rustls-no-provider"] }
# Mutual TLS for the SBI (rustls, ring backend — aws-lc-rs is unavailable offline).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pki-types = { version = "1", features = ["std"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "service"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.23.4", features = ["v4"] }
aka.workspace = true
subscriber-db.workspace = true
hex = "0.4"
getrandom = "0.2"
# OAuth2 access-token signing/verification (HS256 JWT, TS 33.501 §13.4).
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
# Asymmetric access-token signing (ES256 / ECDSA P-256 + JWKS).
p256 = "0.13"

[dev-dependencies]
hex-literal = "0.4"
