[package]
name = "subscriber-db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aka.workspace = true
# Embedded, ACID, pure-Rust KV store for the persistent backend.
redb = "4"
hex = "0.4"
# AEAD encryption-at-rest for persisted credentials (K/OPc).
aes-gcm = "0.11"
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
