[package]
name = "nf-amf"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common.workspace = true
sbi-core.workspace = true
ngap.workspace = true
nas.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
# Async SCTP (kernel stack) for the N2 transport (TS 38.412).
sctp-rs = "0.3"

[dev-dependencies]
hex = "0.4"
