[package]
name = "nf-smf"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common.workspace = true
sbi-core.workspace = true
ngap.workspace = true
nas.workspace = true
pfcp.workspace = true
axum = "0.8.9"
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
serde_json.workspace = true
